# DUMBIT

./: .gitignore  Cargo.toml  DUMBIT_SoftwareDesignDoc.docx  Dockerfile  README.md  licence
design/: architecture.drawio
src/: main.rs
