[package]
name = "dumbit"
version = "2.0.0-beta"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }

# CHANGE THIS LINE: Use "kv-rocksdb" instead of "kv-mem"
surrealdb = { version = "2.6.0", features = ["kv-rocksdb"] } 

serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
colored = "2.2.0"
comfy-table = "7.2.2"